<resources>
    <string name="app_name">project</string>
    <string name="q">Московский Государственный университет имени М.В.Ломоносова</string>
    <string name="w">Московский физико-технический институт</string>
    <string name="e">Санкт-Петербургский государственный университет</string>
    <string name="r"><![CDATA[Национальный исследовательский ядерный университет <МИФИ>]]></string>
    <string name="t"><![CDATA[Национальный исследовательский университет <Высшая школа экономики>]]></string>
    <string name="tt">Московский государсвенный технический университет имени Н.Э.Баумана</string>
    <string name="d">Национальный исследовательский Томский политехнический университет</string>
    <string name="dd">Санкт-Петербургский политехнический университет Петра Великого</string>
    <string name="ad">МГИМО МИД РОССИИ</string>
    <string name="add">Российская академия народного хозяйства и государственной службы при президенте России</string>
</resources>