<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9A8C98"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:text="@string/q"
        android:background="@drawable/shape_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#F2D974"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="85dp"
        android:text="@string/w"
        android:background="@drawable/shape_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#F2D974"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="145dp"
        android:text="@string/e"
        android:background="@drawable/shape_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#F2D974"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="205dp"
        android:text="@string/r"
        android:background="@drawable/shape_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#F2D974"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="265dp"
        android:text="@string/t"
        android:background="@drawable/shape_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#F2D974"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="325dp"
        android:background="@drawable/shape_text"
        android:gravity="center"
        android:text="@string/tt"
        android:textColor="#F2D974"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextSizeCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="385dp"
        android:text="@string/ad"
        android:background="@drawable/shape_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#F2D974"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="445dp"
        android:text="@string/dd"
        android:background="@drawable/shape_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#F2D974"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="505dp"
        android:text="@string/d"
        android:background="@drawable/shape_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#F2D974"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="349dp"
        android:layout_height="63dp"
        android:layout_marginTop="565dp"
        android:background="@drawable/shape_text"
        android:gravity="center"
        android:text="@string/add"
        android:textColor="#F2D974"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />






</androidx.constraintlayout.widget.ConstraintLayout>